--- a/s3-sqs-unique.yml
+++ b/s3-sqs-unique.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Create S3 bucket and SQS queue with unique suffix
+Description: Create S3 bucket, SQS queue, and EC2 instance without key pair
 
 Parameters:
   UniqueSuffix:
@@ -17,3 +17,11 @@ Resources:
     Properties:
       QueueName: !Sub "utkarsh-queue-${UniqueSuffix}"
 
+  MyEC2Instance:
+    Type: AWS::EC2::Instance
+    Properties:
+      InstanceType: t2.micro
+      ImageId: ami-0c618421e203fe3f2  # Amazon Linux 2 (Mumbai region)
+      Tags:
+        - Key: Name
+          Value: !Sub "Utkarsh-Instance-${UniqueSuffix}"
