--- a/s3-sqs-unique.yml
+++ b/s3-sqs-unique.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Create S3 bucket, SQS queue, and EC2 instance without key pair
+Description: Create S3 bucket, SQS queue, and EC2 instance with unique suffix
 
 Parameters:
   UniqueSuffix:
@@ -20,8 +20,21 @@ Resources:
   MyEC2Instance:
     Type: AWS::EC2::Instance
     Properties:
+      ImageId: ami-03bb6d83c60fc5f7c  # ✅ Valid AMI for ap-south-1
       InstanceType: t2.micro
-      ImageId: ami-0c618421e203fe3f2  # Amazon Linux 2 (Mumbai region)
-      Tags:
-        - Key: Name
-          Value: !Sub "Utkarsh-Instance-${UniqueSuffix}"
+      SecurityGroups:
+        - !Ref MySecurityGroup
+
+  MySecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow SSH and HTTP access
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
